--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1><b>Dengue: Uma guerra contra o mosquito.</b></h1>
-<main>A dengue é uma doença viral transmitida principalmente pela picada do mosquito Aedes aegypti. Ela é endêmica em regiões tropicais e subtropicais, afetando principalmente áreas urbanas. Os sintomas incluem febre alta, dores musculares, dor de cabeça intensa, náuseas e erupções cutâneas. Em casos graves, pode ocorrer dengue hemorrágica, caracterizada por sangramento, queda da pressão arterial e risco de morte.</main>
+<main><p>A dengue é uma doença viral transmitida principalmente pela picada do mosquito Aedes aegypti. Ela é endêmica em regiões tropicais e subtropicais, afetando principalmente áreas urbanas. Os sintomas incluem febre alta, dores musculares, dor de cabeça intensa, náuseas e erupções cutâneas. Em casos graves, pode ocorrer dengue hemorrágica, caracterizada por sangramento, queda da pressão arterial e risco de morte.</p></main>
     
 <h2><b>Como combater o mosquito?</b></h2>
 <footer><br/>1. Elimine criadouros de mosquitos, como recipientes com água parada.
@@ -17,10 +17,10 @@
     <br/> 4.Instale telas em janelas e portas para evitar a entrada de mosquitos.
     <br/> 5.Mantenha a limpeza em áreas externas, evitando acúmulo de lixo.
     <br/> 6.Promova a conscientização na comunidade sobre os riscos e medidas preventivas.
-    <br/>7.Realize campanhas de controle de mosquitos, incluindo pulverização de inseticidas em áreas afetadas.
-    <br/>8.Apoie programas de monitoramento e vigilância para detectar e responder rapidamente a surtos de dengue.
-    <br/>9.Incentive a pesquisa e o desenvolvimento de novas estratégias de controle de mosquitos e vacinas contra a dengue.
-    <br/>10Colabore com autoridades de saúde locais para implementar medidas de controle integrado e prevenção da dengue.</footer>
+    <br/> 7.Realize campanhas de controle de mosquitos, incluindo pulverização de inseticidas em áreas afetadas.
+    <br/> 8.Apoie programas de monitoramento e vigilância para detectar e responder rapidamente a surtos de dengue.
+    <br/> 9.Incentive a pesquisa e o desenvolvimento de novas estratégias de controle de mosquitos e vacinas contra a dengue.
+    <br/> 10.Colabore com autoridades de saúde locais para implementar medidas de controle integrado e prevenção da dengue.</footer>
 </body>
 </html>
 <img>
