--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1><b>Dengue: Uma guerra contra o mosquito.</b></h1>
@@ -23,4 +24,4 @@
     <br/> 10.Colabore com autoridades de saúde locais para implementar medidas de controle integrado e prevenção da dengue.</footer>
 </body>
 </html>
-<img>
+<img src="Mosquito.jpeg" width="30%" height="100%">
